@@ -35,6 +35,7 @@ nobase_dist_ppdata_DATA = \
 	    textures/gaugeoutline.png	\
 	    textures/menu_bottom_right.png	\
 		textures/listbox_arrows.png	\
+		textures/hscale_arrows.png	\
 		textures/noicon.png	\
 		textures/speedmask.png	\
 		textures/conditions_button.png	\
