@@ -29,5 +29,6 @@
 #include "ui/entry.h"
 #include "ui/textarea.h"
 #include "ui/frame.h"
+#include "ui/scale.h"
 
 #endif // _PPOGL_UI_H_
